[gd_scene load_steps=6 format=3 uid="uid://cr3vuioy7fq5r"]

[ext_resource type="Script" uid="uid://b2t3pk7obnr6c" path="res://scenes/puzzle_2.gd" id="1_f6wgn"]
[ext_resource type="Theme" uid="uid://sq0n6lqukxx5" path="res://theme.tres" id="1_yywr8"]

[sub_resource type="Animation" id="Animation_yywr8"]
resource_name = "typewriter"
length = 7.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_f6wgn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nw4ng"]
_data = {
&"RESET": SubResource("Animation_f6wgn"),
&"typewriter": SubResource("Animation_yywr8")
}

[node name="puzzle_2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f6wgn")
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1054.5
offset_top = -632.0
offset_right = 1054.5
offset_bottom = 632.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1658459, 0.28475168, 0.5073147, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -992.0
offset_top = -597.0
offset_right = 988.0
offset_bottom = -218.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_yywr8")
theme_override_font_sizes/normal_font_size = 70
text = "Good job so far.  We have narrowed the potential suspects to	3 people named Mason, all located nearby during the incident.	[Redacted User], please continue your mission by directing some questions to the suspects."
visible_characters = 0
visible_ratio = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_nw4ng")
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -973.5
offset_top = -222.0
offset_right = 973.5
offset_bottom = 610.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_yywr8")
text = "Suspect 		1: Click box to ask question"
autowrap_mode = 3

[node name="OptionButton" type="OptionButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme = ExtResource("1_yywr8")
toggle_mode = false
item_count = 2
popup/item_0/text = "Ask: Where were you at the time of the incident?"
popup/item_0/id = 0
popup/item_1/text = "Ask: Describe your relationship with the deceased"
popup/item_1/id = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_yywr8")
text = "Suspect  	2: Click box to ask question"
autowrap_mode = 3

[node name="OptionButton2" type="OptionButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme = ExtResource("1_yywr8")
item_count = 2
popup/item_0/text = "Ask: Where were you at the time of the incident?"
popup/item_0/id = 0
popup/item_1/text = "Ask: Describe your relationship with the deceased"
popup/item_1/id = 1

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_yywr8")
text = "Suspect 		3: Click box to ask question"
autowrap_mode = 3

[node name="OptionButton3" type="OptionButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme = ExtResource("1_yywr8")
item_count = 2
popup/item_0/text = "Ask: Where were you at the time of the incident?"
popup/item_0/id = 0
popup/item_1/text = "Ask: Describe your relationship with the deceased"
popup/item_1/id = 1

[node name="murderer_name" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("1_yywr8")
text = "Which suspect is the murderer?"
autowrap_mode = 3

[node name="enter name" type="LineEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_yywr8")
placeholder_text = "Number  or type HINT for a hint"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5

[connection signal="item_selected" from="VBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="item_selected" from="VBoxContainer/OptionButton2" to="." method="_on_option_button_2_item_selected"]
[connection signal="item_selected" from="VBoxContainer/OptionButton3" to="." method="_on_option_button_3_item_selected"]
[connection signal="text_submitted" from="VBoxContainer/enter name" to="." method="_on_enter_name_text_submitted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
